change route representation to linked list for performance improvement